# robotics-portfolio

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  ros2_curriculum.md
algorithms/a_star/: a_star.py
algorithms/bfs_dfs/: bfs.py  bfs_rivised.py  dfs.py
algorithms/kd_tree/: kd_tree.py
cpp_basics/: 01_modern_basics.cpp  02_exercise.cpp  03_stl_containers.cpp
ros2_notes_py/: 01_topic_publisher.py  02_topic_subscriber.py  03_service_server.py  04_service_client.py
ros2_workspace/: README.md
ros2_workspace/src/ros2_notes_cpp/: CMakeLists.txt  package.xml
ros2_workspace/src/ros2_notes_cpp/src/: gripper_client.cpp  gripper_server.cpp  joint_publisher.cpp  joint_subscriber.cpp
ros2_workspace/src/so101_tools/: CMakeLists.txt
ros2_workspace/src/so101_tools/src/: calibration.cpp  demo_motion.cpp
